changes on new branch

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
             css variables
         </span>
     </nav>
-    <input class="bg-black fill-orange-900" type="range" id="range" value="10" min="10" max="100" onchange="updateValue()" >
+    <input class="bg-orange-600 fill-orange-900" type="range" id="range" value="10" min="10" max="100" onchange="updateValue()" >
     <span>
         <p id="inputvalue">%</p>
     </span>
